// Generated by j5build v0.0.0-20250905235418-380716aaea76. DO NOT EDIT

syntax = "proto3";

package test.foo.v1;

import "buf/validate/validate.proto";
import "google/protobuf/timestamp.proto";
import "j5/ext/v1/annotations.proto";
import "j5/list/v1/annotations.proto";
import "j5/state/v1/metadata.proto";

message FooKeys {
  option (j5.ext.v1.psm) = {
    entity_name: "foo"
    entity_part: ENTITY_PART_KEYS
  };

  option (j5.ext.v1.message).object = {};

  string foo_id = 1 [
    (buf.validate.field) = {
      required: true
      string: {
        uuid: true
      }
    },
    (j5.ext.v1.field).key.format = FORMAT_UUID,
    (j5.ext.v1.key).primary = true,
    (j5.list.v1.field).string.foreign_key.uuid.filtering.filterable = true
  ];

  string bar_id = 2 [
    (buf.validate.field) = {
      required: true
      string: {
        uuid: true
      }
    },
    (j5.ext.v1.field).key = {
      format: FORMAT_UUID
      foreign: {
        package: "test.foo.v1"
        entity: "Bar"
      }
    },
    (j5.ext.v1.key) = {},
    (j5.list.v1.field).string.foreign_key.uuid.filtering.filterable = true
  ];
}

message FooData {
  option (j5.ext.v1.psm) = {
    entity_name: "foo"
    entity_part: ENTITY_PART_DATA
  };

  option (j5.ext.v1.message).object = {};

  string name = 1 [
    (j5.ext.v1.field).string = {},
    (j5.list.v1.field).string.open_text.searching.searchable = true
  ];

  Bar bar = 2 [(j5.ext.v1.field).object = {}];

  google.protobuf.Timestamp created_at = 3 [
    (j5.ext.v1.field).timestamp = {},
    (j5.list.v1.field).timestamp = {
      filtering: {
        filterable: true
      }
      sorting: {
        sortable: true
        default_sort: true
      }
    }
  ];
}

message FooState {
  option (j5.ext.v1.psm) = {
    entity_name: "foo"
    entity_part: ENTITY_PART_STATE
  };

  option (j5.ext.v1.message).object = {};

  j5.state.v1.StateMetadata metadata = 1 [
    (buf.validate.field).required = true,
    (j5.ext.v1.field).object = {}
  ];

  FooKeys keys = 2 [
    (buf.validate.field).required = true,
    (j5.ext.v1.field).object.flatten = true
  ];

  FooData data = 3 [
    (buf.validate.field).required = true,
    (j5.ext.v1.field).object = {}
  ];

  FooStatus status = 4 [
    (buf.validate.field) = {
      required: true
      enum: {
        defined_only: true
      }
    },
    (j5.ext.v1.field).enum = {},
    (j5.list.v1.field).enum.filtering.filterable = true
  ];
}

message FooEventType {
  option (j5.ext.v1.message).oneof = {};

  oneof type {
    Created created = 1 [(j5.ext.v1.field).object = {}];

    Updated updated = 2 [(j5.ext.v1.field).object = {}];
  }

  // Comment on Created
  message Created {
    option (j5.ext.v1.message).object = {};

    string field = 1 [(j5.ext.v1.field).string = {}];
  }

  // Comment on Updated
  message Updated {
    option (j5.ext.v1.message).object = {};

    string field = 1 [(j5.ext.v1.field).string = {}];
  }
}

message FooEvent {
  option (j5.ext.v1.psm) = {
    entity_name: "foo"
    entity_part: ENTITY_PART_EVENT
  };

  option (j5.ext.v1.message).object = {};

  j5.state.v1.EventMetadata metadata = 1 [
    (buf.validate.field).required = true,
    (j5.ext.v1.field).object = {}
  ];

  FooKeys keys = 2 [
    (buf.validate.field).required = true,
    (j5.ext.v1.field).object.flatten = true
  ];

  FooEventType event = 3 [
    (buf.validate.field).required = true,
    (j5.ext.v1.field).oneof = {},
    (j5.list.v1.field).oneof.filtering.filterable = true
  ];
}

message Bar {
  option (j5.ext.v1.message).object = {};

  string id = 1 [
    (buf.validate.field).string.uuid = true,
    (j5.ext.v1.field).key.format = FORMAT_UUID,
    (j5.list.v1.field).string.foreign_key.uuid.filtering.filterable = true
  ];

  string field = 2 [
    (j5.ext.v1.field).string = {},
    (j5.list.v1.field).string.open_text.searching.searchable = true
  ];
}

enum FooStatus {
  FOO_STATUS_UNSPECIFIED = 0;
  FOO_STATUS_ACTIVE = 1;
  FOO_STATUS_INACTIVE = 2;
}
